--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "sass": "^1.64.2",
     "webpack": "^5.88.2",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "navigo": "^8.11.1"
   }
 }
